Update resources and automation playbooks

--- a/examples/simple/automation/application-install.yml
+++ b/examples/simple/automation/application-install.yml
@@ -1,11 +1,13 @@
 - name: Examples simple - Install application
   hosts: localhost
   connection: local
-  gather_facts: true
+
+  vars:
+    ansible_python_interpreter: /usr/bin/python2
 
   tasks:
     - name: The httpd.service unit is up-and-running
-      ansible.builtin.dnf:
+      ansible.builtin.yum:
         name: httpd.service
         state: started
         enabled: true
