--- a/examples/simple/automation/application-tests.yml
+++ b/examples/simple/automation/application-tests.yml
@@ -2,7 +2,9 @@
 - name: Examples simple - Test application
   hosts: localhost
   connection: local
-  gather_facts: true
+
+  vars:
+    ansible_python_interpreter: /usr/bin/python2
 
   tasks:
     - ansible.builtin.ping:
