Update resources and auxiliary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Local .terraform directories
 **/.terraform/*
+#
+# Local .terraform.lock.hcl file used for module testing.
+**/.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
