Update resources and auxiliary files
- The directory used to store SSM documents was relocated from the
  example directory to the module's root directory. The SSM document
  provided here is specific to the module itself, not a specific
  example.

- The directory storing ansible playbooks is specific for each
  configuration where the terraform-aws-ssm module is used. However, the
  directory structure used to store the ansible playbooks
  must be as the example illustrates in order for the module to work
  properly (e.g., ansible playbooks must be stored in the
  `ansible/playbooks/ directory', roles in `ansible/roles', and
  `ansible.cfg` must be present to understand this configuration.)

- Previously, the SSM document considered both one file and one
  directory as SourceInfo. Now, only the `ansible' directory is
  accepted, the directory structure where ansible playbooks are stored.

- Previously, it was possible to execute one single playbook (when a
  file was specified) or many (when a directory was specified).  This
  update changes the `documents/ApplyAnsiblePlaybooks.json` file to run
  all playbooks in the ansible directory structure, in alphabetic order.
  The possibility of running playbooks individually was removed to
  simplify the document's integration.

- Ansible playbooks and roles were added to examples/simple/ansible
  directory structure to illustrate the configuration required for the
  module to work. In this particular case, playbooks install the httpd web
  server and configure it to print a `Hello, World!` message, then test
  the output. This hopefully illustrates the configuration and testing
  process required both before and after automatic patching.

--- a/documents/ApplyAnsiblePlaybooks.json
+++ b/documents/ApplyAnsiblePlaybooks.json
@@ -3,11 +3,18 @@
   "description": "Use this document to run Ansible Playbooks on Systems Manager managed instances. It allows you to run one single playbook when you provide a file or many playbooks when you provide a directory. Content must be stored in s3 buckets and specified using a private url (e.g., starting with s3://).",
   "parameters": {
     "SourceInfo": {
-      "description": "(Required) Specify the remote playbook file (e.g., 's3://${name}-ssm/00-application-configuration.yml') or directory (e.g., 's3://${name}-ssm/playbooks/') you want to execute. Important: the IAM instance profile on your managed instances must be configured with read access to Amazon S3. Important: When you enter a directory, all the yml/yaml files inside it will be process one by one in alphabetic order.",
+      "description": "(Required) Specify the remote ansible directory structure (e.g., 's3://${name}-ssm/ansible/'). The directory structure must have the ansible.cfg file configured to operate with playbooks and roles as directories in the same directory level. Important: the IAM instance profile on your managed instances must be configured with read access to Amazon S3.",
       "type": "String",
       "displayType": "textfield",
-      "allowedPattern": "^s3://([(a-z_A-Z0-9\\-\\.)\/]+(.yml|.yaml)|[(a-z_A-Z0-9\\-\\.)\/]+\/)$",
-      "default": "s3://${name}-ssm/playbooks/"
+      "allowedPattern": "^s3://[(a-z_A-Z0-9\\-\\.)\/]+\/$",
+      "default": "s3://${name}-ssm/ansible/"
+    },
+    "TargetInfo": {
+      "description": "(Required) Specify the local ansible directory, in the SSM managed EC2 instances, where remote ansible directory structure will be stored.",
+      "type": "String",
+      "displayType": "textfield",
+      "allowedPattern": "^/[(a-z_A-Z0-9\\-\\.)\/]+\/$",
+      "default": "/opt/${name}-ssm/ansible/"
     },
     "ExtraVariables": {
       "type": "String",
@@ -47,13 +54,11 @@
       "action": "aws:runShellScript",
       "name": "downloadContent",
       "inputs": {
-        "timeoutSeconds": "{{ TimeoutSeconds }}",
+        "timeoutSeconds": "{{TimeoutSeconds}}",
         "runCommand": [
           "#!/bin/bash",
-          "if [[ \"{{SourceInfo}}\" =~ (.yml|.yaml)$ ]] ; then",
-          "   aws s3 cp \"{{SourceInfo}}\" \"main.yml\"",
-          "elif [[ \"{{SourceInfo}}\" =~ /$ ]] ; then",
-          "   aws s3 sync --delete \"{{SourceInfo}}\" \"./playbooks/\"",
+          "if [[ \"{{SourceInfo}}\" =~ /$ ]] ; then",
+          "   aws s3 sync --delete \"{{SourceInfo}}\" \"{{TargetInfo}}\"",
           "else",
           "     echo \"The SourceInfo ({{SourceInfo}}) specified doesn't match its naming pattern. You can review the log files to help you correct the problem.\" >&2",
           "     exit 1",
@@ -68,23 +73,29 @@
         "timeoutSeconds": "{{ TimeoutSeconds }}",
         "runCommand": [
           "#!/bin/bash",
-          " ",
           "runAnsiblePlaybook() {",
-          "   local PLAYBOOK=$${1:-main.yml}",
-          "   if [ ! -f  \"$${PLAYBOOK}\" ] ; then",
-          "       echo \"The specified Playbook file doesn't exist in the downloaded bundle. Please review the specified path.\" >&2",
-          "       exit 2",
-          "   fi",
-          "   if  [[ \"{{Check}}\" == True ]] ; then",
-          "       ansible-playbook -i \"localhost,\" --check -c local -e \"{{ExtraVariables}}\" \"{{Verbose}}\" \"$${PLAYBOOK}\"",
-          "   else",
-          "       ansible-playbook -i \"localhost,\" -c local -e \"{{ExtraVariables}}\" \"{{Verbose}}\" \"$${PLAYBOOK}\"",
+          "   local PLAYBOOK=$${1}",
+          "   local PLAYBOOK_EXIT=0",
+          "   if [[ -f \"$${PLAYBOOK}\" ]] ; then",
+          "       if  [[ \"{{Check}}\" == True ]] ; then",
+          "           echo \"Playbook on check mode: $${PLAYBOOK}\"",
+          "           ansible-playbook -i \"localhost,\" --check -c local -e \"{{ExtraVariables}}\" \"{{Verbose}}\" \"$${PLAYBOOK}\"",
+          "           PLAYBOOK_EXIT=$${?}",
+          "       else",
+          "           echo \"Playbook: $${PLAYBOOK}\"",
+          "           ansible-playbook -i \"localhost,\" -c local -e \"{{ExtraVariables}}\" \"{{Verbose}}\" \"$${PLAYBOOK}\"",
+          "           PLAYBOOK_EXIT=$${?}",
+          "       fi",
+          "       if [[ $${PLAYBOOK_EXIT} -ne 0 ]] ; then",
+          "         echo \"Playbook failed: $${PLAYBOOK}. Check the logs.\" >&2",
+          "         exit $${PLAYBOOK_EXIT}",
+          "       fi",
+          "       echo \"--------------------------------------------------------------------------------\"",
           "   fi",
           "}",
-          " ",
           "if [ -f  \"/etc/system-release\" ] ; then",
           "   if ( cat /etc/system-release | grep -i 'Amazon Linux release 2' ) ; then ",
-          "       sudo amazon-linux-extras install ansible2 -y",
+          "       [[ ! -x /usr/bin/ansible-playbook ]] && amazon-linux-extras install ansible2 -y",
           "   else",
           "       echo \"There was a problem installing or updating the required tools for the document. You can review the log files to help you correct the problem.\" >&2",
           "       exit 1",
@@ -93,13 +104,24 @@
           "   echo \"There was a problem installing or updating the required tools for the document. You can review the log files to help you correct the problem.\" >&2",
           "   exit 1",
           "fi",
-          " ",
-          "if [[ \"{{SourceInfo}}\" =~ (.yml|.yaml)$ ]] ; then",
-          "   runAnsiblePlaybook",
-          "elif [[ \"{{SourceInfo}}\" =~ /$ ]] ; then",
-          "   for playbook in $(find ./playbooks/ -regextype egrep -regex '.+.(yml|yaml)$' | sort); do",
-          "     runAnsiblePlaybook \"$${playbook}\"",
-          "   done",
+          "cd {{TargetInfo}}",
+          "echo \"--------------------------------------------------------------------------------\"",
+          "echo \"Working directory: $(pwd)\"",
+          "echo \"User: $(id)\"",
+          "echo \"--------------------------------------------------------------------------------\"",
+          "echo \"$(ansible --version)\"",
+          "echo \"--------------------------------------------------------------------------------\"",
+          "if [[ \"{{SourceInfo}}\" =~ /$ ]] ; then",
+          "   if [[ -d playbooks ]]; then",
+          "       PLAYBOOKS=$(find ./playbooks/ -regextype egrep -regex '.+.(yml|yaml)$' | sort)",
+          "       for PLAYBOOK in $${PLAYBOOKS};do runAnsiblePlaybook \"$${PLAYBOOK}\"; done",
+          "   else",
+          "       echo \"Error executing ansible directory structure. The {{TargetInfo}}/playbooks directory doesn't exist.\"",
+          "       exit 1",
+          "   fi",
+          "else",
+          "   echo \"Error executing ansible directory structure.\"",
+          "   exit 1",
           "fi"
         ]
       }
