Simplify ansible directory structure
- Previously, it was required for ApplyAnsiblePlaybooks.json to have a
  directory structure with files like ansible.cfg and playbooks
  directory present in order to work. This introduces a complexity at
  time of adoption so it was reduced. Playbooks were moved to ansible
  root directory and the ansible.cfg file was removed.

- Update parameters description in ApplyAnsiblePlaybooks.json.

- Update maintenance window schedule to specify not just the day
  recurrence but the exact hour where it happens.

- Update README

--- a/documents/ApplyAnsiblePlaybooks.json
+++ b/documents/ApplyAnsiblePlaybooks.json
@@ -1,9 +1,9 @@
 {
   "schemaVersion": "2.2",
-  "description": "Use this document to run Ansible Playbooks on Systems Manager managed instances. It allows you to run one single playbook when you provide a file or many playbooks when you provide a directory. Content must be stored in s3 buckets and specified using a private url (e.g., starting with s3://).",
+  "description": "Use this document to run Ansible Playbooks on Systems Manager managed EC2 instances.",
   "parameters": {
     "SourceInfo": {
-      "description": "(Required) Specify the remote ansible directory structure (e.g., 's3://${name}-ssm/ansible/'). The directory structure must have the ansible.cfg file configured to operate with playbooks and roles as directories in the same directory level. Important: the IAM instance profile on your managed instances must be configured with read access to Amazon S3.",
+      "description": "(Required) Specify the remote ansible directory structure (e.g., 's3://${name}-ssm/ansible/'). Playbooks must be organized inside this `ansible' directory using Ansible directory layout best practices (See https://docs.ansible.com/ansible/2.8/user_guide/playbooks_best_practices.html#directory-layout). Important: the IAM instance profile on your managed instances must be configured with read access to Amazon S3.",
       "type": "String",
       "displayType": "textfield",
       "allowedPattern": "^s3://[(a-z_A-Z0-9\\-\\.)\/]+\/$",
@@ -104,23 +104,18 @@
           "   echo \"There was a problem installing or updating the required tools for the document. You can review the log files to help you correct the problem.\" >&2",
           "   exit 1",
           "fi",
-          "cd {{TargetInfo}}",
-          "echo \"--------------------------------------------------------------------------------\"",
-          "echo \"Working directory: $(pwd)\"",
-          "echo \"User: $(id)\"",
-          "echo \"--------------------------------------------------------------------------------\"",
-          "echo \"$(ansible --version)\"",
-          "echo \"--------------------------------------------------------------------------------\"",
-          "if [[ \"{{SourceInfo}}\" =~ /$ ]] ; then",
-          "   if [[ -d playbooks ]]; then",
-          "       PLAYBOOKS=$(find ./playbooks/ -regextype egrep -regex '.+.(yml|yaml)$' | sort)",
-          "       for PLAYBOOK in $${PLAYBOOKS};do runAnsiblePlaybook \"$${PLAYBOOK}\"; done",
-          "   else",
-          "       echo \"Error executing ansible directory structure. The {{TargetInfo}}/playbooks directory doesn't exist.\"",
-          "       exit 1",
-          "   fi",
+          "if [[ -d \"{{TargetInfo}}\" ]] ; then",
+          "   cd {{TargetInfo}}",
+          "   echo \"--------------------------------------------------------------------------------\"",
+          "   echo \"Working directory: $(pwd)\"",
+          "   echo \"User: $(id)\"",
+          "   echo \"--------------------------------------------------------------------------------\"",
+          "   echo \"$(ansible --version)\"",
+          "   echo \"--------------------------------------------------------------------------------\"",
+          "   PLAYBOOKS=$(find . -maxdepth 1 -regextype egrep -regex '.+(.yml|.yaml)$' | sort)",
+          "   for PLAYBOOK in $${PLAYBOOKS};do runAnsiblePlaybook \"$${PLAYBOOK}\"; done",
           "else",
-          "   echo \"Error executing ansible directory structure.\"",
+          "   echo \"Error executing ansible on directory structure.\"",
           "   exit 1",
           "fi"
         ]
