--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Ignore NPM related files
+node_modules
