--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "git-cz": "^4.9.0",
     "semantic-release": "^19.0.3"
   },
+  "release": {
+    "branches": ["main"]
+  },
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
