--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/github"
+    "@semantic-release/github",
+    "@semantic-release/npm", {
+      "npmPublish": false
+    }
   ],
   "config": {
     "commitizen": {
