--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
   },
   "homepage": "https://github.com/areguera/terraform-aws-ssm#readme",
   "devDependencies": {
+    "commitizen": "^4.2.5",
     "@semantic-release/github": "^8.0.4",
-    "git-cz": "^4.9.0",
     "semantic-release": "^19.0.3"
   },
   "release": {
-    "branches": ["main"]
+    "branches": [
+      "main"
+    ]
   },
+  "private": true,
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
-    "@semantic-release/npm", {
-      "npmPublish": false
-    }
+    "@semantic-release/npm"
   ],
   "config": {
     "commitizen": {
-      "path": "git-cz"
+      "path": "cz-conventional-changelog"
     }
   }
 }
